src/objects/Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Caller_Id_ANI__c</fullName>
        <label>Caller Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <description>This field will have the caller type</description>
        <label>Caller Type</label>
        <picklist>
            <picklistValues>
                <fullName>Benefit Adminstrator/Unlisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listed Broker of Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listed General Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlisted Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHC Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Benefits Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Billing Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claim_Authorization_Referral_Number__c</fullName>
        <label>Claim/Authorization/Referral  Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highlight_Panel_GroupInfo__c</fullName>
        <label>Highlight Panel GroupInfo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>History_Log__c</fullName>
        <label>History Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Date_of_Birth__c</fullName>
        <label>Member Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <label>Member ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <label>NPI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Name__c</fullName>
        <label>Originator Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Type__c</fullName>
        <label>Originator Type</label>
        <picklist>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group/Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlisted Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Originator__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Originator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Type_Code__c</fullName>
        <label>Question Type Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Application__c</fullName>
        <label>Source Application</label>
        <picklist>
            <picklistValues>
                <fullName>ACET</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ISET</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TFN_Toll_Free_Number__c</fullName>
        <label>TFN (Toll Free Number)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <label>Provider Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party</label>
        <referenceTo>Third_Party__c</referenceTo>
        <relationshipLabel>Interactions (Third Party)</relationshipLabel>
        <relationshipName>Interactions1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Originator__c</columns>
        <columns>Interaction_Type__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Research_Only_Interactions</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Research Only</value>
        </filters>
        <label>Research Only Interactions</label>
    </listViews>
    <nameField>
        <displayFormat>INT-{0}</displayFormat>
        <label>Interaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <label>Phone</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>